Fixed post settings menu dark models

--- a/ghost/admin/app/styles/components/settings-menu.css
+++ b/ghost/admin/app/styles/components/settings-menu.css
@@ -87,7 +87,7 @@
     width: 100%;
     max-width: 380px;
     overflow: auto;
-    background-color: white;
+    background-color: var(--white);
     opacity: 1;
 }
 
